--- a/Week_1_assignment.html
+++ b/Week_1_assignment.html
@@ -7,6 +7,11 @@
     <title>Week 1</title>
 </head>
 <body>
+    <p>Sequence</p>
+    <p>Statistics</p>
     
+    <script>
+        const lenght = 150;
+    </script>
 </body>
 </html>
