--- a/Week_1_assignment.html
+++ b/Week_1_assignment.html
@@ -5,13 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    #sequence {
+        text-align: center;
+        max-width: 250px;
+        overflow-wrap: break-word;
+        padding-bottom: 20px;
+    }
+    body {
+        padding: 30px 0;
+        min-height: 100vh;
+        font-family: 'Roboto Mono', monospace;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    #sequenceLength {
+        padding-bottom: 20px;
+    }
+</style>
 <body>
-    <p>Sequence</p>
-    <p>Statistics</p>
-    
+    <h2>Sequence</h2>
+    <p id="sequence"></p>
+    <h2>Statistics</h2>
+    <p id="gcPercentage"></p>
+    <p id="proteinLength"></p>
+    <p id="sequenceLength"></p>
+
+    <ul id="countList"></ul>
+
     <script>
-        const lenght = 150;
+        const startCodon = "ATG";
+        const stopCodon = "TAA";
+        const chunkSize = 30;
+
+        let sequenceElem = document.getElementById("sequence");
+        let percentageElem = document.getElementById("gcPercentage");
+        let proteinElem = document.getElementById("proteinLength");
+        let sequenceLengthElem = document.getElementById("sequenceLength");
+        let countListElem = document.getElementById("countList");
+
+        const length = Math.round(148 / 3) * 3;
+        const DNA = ["A", "C", "G", "T"]
+        let seq = "";
+        for (let i = 0; i < length; i++) {
+            seq += DNA[Math.floor(Math.random()*DNA.length)]
+        }
+
+        let indexStart = Math.floor(Math.random() * (40 - 0 + 1) + 0)
+        let indexStop = Math.floor(Math.random() * ((length - 3) - (length - 40) + 1) + (length - 40))
+        seq = seq.substring(0, indexStart) + startCodon + seq.substring(indexStart + startCodon.length);
+        seq = seq.substring(0, indexStop) + stopCodon + seq.substring(indexStop + stopCodon.length);
+        sequenceElem.innerHTML = seq;
+
+        const GCCOunt = (seq.match(/C/g) || []).length + (seq.match(/G/g) || []).length;
+        percentageElem.innerHTML = `GC Percentage: ${(GCCOunt / length * 100).toFixed(2)}%`;
+        
+        proteinElem.innerHTML = `Protein length: ${(seq.lastIndexOf(stopCodon) + 2) - seq.indexOf(startCodon)}`;
+        sequenceLengthElem.innerHTML = `Sequence length: ${length}`;
+
+
+        let counts = {};
+        for (const aa of seq.match(/.{1,3}/g)) {
+            counts[aa] = counts[aa] ? counts[aa] + 1 : 1;
+        }
+        Object.keys(counts).map(key => {
+            var entry = document.createElement('li');
+            entry.appendChild(document.createTextNode(`${key}: ${counts[key]}\n`));
+            countListElem.appendChild(entry);
+        })
     </script>
 </body>
 </html>
