--- a/Week_2_assignment.html
+++ b/Week_2_assignment.html
@@ -16,7 +16,7 @@
         overflow-wrap: break-word;
         padding: 10px 20px;
         max-height: 500px;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
     * {
         margin: 0;
@@ -61,98 +61,8 @@
         let formElement = document.getElementById("sequence-length");
         let enzymeInput = document.getElementById("enzyme");
         let inputElem = document.getElementById("length");
-        inputElem.addEventListener('input', () => {
-            generateSeqButton.disabled = true;
-            let number = inputElem.value;
-            if (!isInt(number)) {return;}
-            if (number < 10000) {return;}
-            generateSeqButton.disabled = false;
-        });
-        formElement.addEventListener('submit', (e) => {
-            e.preventDefault();
-            let number = inputElem.value;
-            sequence.randomSequence = number;
-            let sequenceElem = document.getElementById("sequence");
-            sequenceElem.innerHTML = sequence.seq;
-            enzymeForm.style.display = '';
-        })
-        enzymeInput.addEventListener('input', () => {
-            submitButton.disabled = true;
-            if (enzymeInput.value.length > 0) {
-                submitButton.disabled = false;
-            }
-        });
-        enzymeForm.addEventListener('submit', parseData(e))
-        function parseData(e) {
-            e.preventDefault();
-            console.log("Hi")
-        }
-        // enzymeForm.addEventListener('submit', (e) => {
-        //     e.preventDefault();
-        //     let enzym = enzymeInput.value;
-        //     loadEnzym(enzym);
-            
-        // });
-        async function loadEnzym(enzymList) {
-            // const promises = enzymList.split(";").forEach(enzym => {
-            //     let url = `https://bioinf.nl/enzyme/api/v1/enzyme/${enzym}`;
-            //     fetch(url, {method: "POST"});
-            // })
-            await Promise.all(enzymList.split(";").forEach(enzym => {
-                let url = `https://bioinf.nl/enzyme/api/v1/enzyme/${enzym}`;
-                fetch(url, {method: "POST"});
-            }));
-            // await Promise.all(enzymList.split(";").forEach(enzym => {
-            //     let url = `https://bioinf.nl/enzyme/api/v1/enzyme/${enzym}`;
-            //     cuttinSites[enzym] = {"sites": [], "location": []}
-            //     let response = fetch(url, {method: "POST"});
+        let sequenceElem = document.getElementById("sequence");
 
-            // }))
-            // enzymList.split(";").forEach(enzym => {
-            //     let url = `https://bioinf.nl/enzyme/api/v1/enzyme/${enzym}`;
-            //     cuttinSites[enzym] = {"sites": [], "location": []}
-            //     let response = await fetch(url, {method: "POST"});
-            // });
-            // enzymList.split(";").forEach(enzym => {
-            //     let url = `https://bioinf.nl/enzyme/api/v1/enzyme/${enzym}`;
-            //     cuttinSites[enzym] = {"sites": [], "location": []}
-            //     let response = await fetch(url, {method: "POST"});
-            //     if (response.ok) {
-            //         let result = await response.json()
-            //         result.site.forEach(element => {
-            //             let site = element.replace("^", "");
-            //             cuttinSites[enzym].sites.push(site)
-            //             var re = new RegExp(site, "g");
-            //             let matches = [...sequence.seq.matchAll(re)];
-            //             let indexes = []
-            //             matches.forEach((match) => {
-            //                 indexes.push(match.index)
-            //             })
-            //             cuttinSites[enzym].location.push(indexes)
-            //         });
-            //     } else {
-            //         cuttinSites[enzym] = {"sites": ["-"], "location": []}
-            //     }
-            // })
-            
-            // let countListElem = document.getElementById("countList");
-            // Object.keys(cuttinSites).forEach(function(key, index) {
-            //     cuttinSites[key].sites.forEach(function (site, i) {
-            //         let entry = document.createElement('li');
-            //         let text = "";
-            //         if (site === "-") {
-            //             text = `${key} does not exist.`
-            //         } else if (cuttinSites[key].location[i].length < 1) {
-            //             text = `${key}'s site '${site}' is not present in the sequence.`
-            //         }  else {
-            //             text = `${key}'s site '${site}' is present in the sequence (position(s) ${cuttinSites[key].location[i]})`
-            //         }
-            //         entry.appendChild(document.createTextNode(text));
-            //         countListElem.appendChild(entry);
-            //     })
-            // })
-        }
-        let cuttinSites = {}
         let sequence = {
             sequenceTypes: ["A", "C", "G", "T"],
             startCodon: "ATG",
@@ -171,6 +81,71 @@
 
         function isInt(value) {
             return !isNaN(value) && (function(x) { return (x | 0) === x; })(parseFloat(value))
+        }
+
+        inputElem.addEventListener('input', () => {
+            generateSeqButton.disabled = true;
+            let number = inputElem.value;
+            if (!isInt(number)) {return;}
+            if (number < 10000) {return;}
+            generateSeqButton.disabled = false;
+        });
+        formElement.addEventListener('submit', (e) => {
+            e.preventDefault();
+            let number = inputElem.value;
+            sequence.randomSequence = number;
+            sequenceElem.innerHTML = sequence.seq;
+            enzymeForm.style.display = '';
+        })
+        enzymeInput.addEventListener('input', () => {
+            submitButton.disabled = true;
+            if (enzymeInput.value.length > 0) {
+                submitButton.disabled = false;
+            }
+        });
+        enzymeForm.addEventListener('submit', parseEnzym);
+        function parseEnzym(e) {
+            e.preventDefault();
+            let enzym = enzymeInput.value;
+            loadEnzym(enzym);
+        };
+        async function loadEnzym(enzym) {
+            let cuttinSites = {}
+            cuttinSites[enzym] = {"sites": [], "location": []}
+            let url = `https://bioinf.nl/enzyme/api/v1/enzyme/${enzym}`;
+            let response = await fetch(url, {method: "POST"});
+            if (response.ok) {
+                let result = await response.json();
+                result.site.forEach(element => {
+                    let site = element.replace("^", "");
+                    cuttinSites[enzym].sites.push(site);
+                    let re = new RegExp(site, "g");
+                    let matches = [...sequence.seq.matchAll(re)];
+                    let indexes = [];
+                    matches.forEach((match) => {
+                        indexes.push(match.index)
+                    });
+                    cuttinSites[enzym].location.push(indexes);
+                });
+            } else {
+                cuttinSites[enzym] = {"sites": ["-"], "location": []}
+            }
+            let countListElem = document.getElementById("countList");
+            Object.keys(cuttinSites).forEach(function(key, index) {
+                cuttinSites[key].sites.forEach(function (site, i) {
+                    let entry = document.createElement('li');
+                    let text;
+                    if (site === "-") {
+                        text = `Enzym '${key}' not found.`
+                    } else if (cuttinSites[key].location[i].length < 1) {
+                        text = `${key}'s site '${site}' is not present in the sequence.`
+                    } else {
+                        text = `${key}'s site '${site}' is present in the sequence (position(s) ${cuttinSites[key].location[i]})`;
+                    }
+                    entry.appendChild(document.createTextNode(text));
+                    countListElem.appendChild(entry);
+                });
+            })
         }
     </script>
 </body>
