--- a/Week_3_assignment.html
+++ b/Week_3_assignment.html
@@ -88,6 +88,7 @@
         let enzymeInput = document.getElementById("enzyme");
         let inputElem = document.getElementById("length");
         let sequenceElem = document.getElementById("sequence");
+        let getEnzymButton = document.getElementById("submit");
 
         let sequence = {
             sequenceTypes: ["A", "C", "G", "T"],
@@ -123,63 +124,77 @@
             sequenceElem.innerHTML = sequence.seq;
             enzymeForm.style.display = '';
         })
-        enzymeForm.addEventListener('submit', parseEnzym);
-        function parseEnzym(e) {
+        enzymeForm.addEventListener('submit', getEnzym);
+        function getEnzym(e) {
             e.preventDefault();
+            getEnzymButton.disabled = true;
             let enzym = enzymeInput.value;
             loadEnzym(enzym);
         };
         async function loadEnzym(enzym) {
             let url = `https://bioinf.mocklab.io/api/v2/enzymes/${enzym}`;
-            let response = await fetch(url, {method: "GET"});
-            console.log(response)
-            // if (response.status != 200) {
-            //     toastr.error(`${enzym} is not in the api!`);
-            // }
+            const controller = new AbortController();
+            // AFTER 4 SECONDS IT WILL THROW A REJECT
+            const timeoutId = setTimeout(() => controller.abort(), 4000)
+            try {
+                let response = await fetch(url, {method: "GET", signal: controller.signal});
+                if (response.status != 200) {
+                    return await Promise.reject(response);
+                }
+                parseEnzym(enzym, response);
+                
+            } catch (err) {
+                if (err.name === 'AbortError') {
+                    toastr.error(`A timeout occured!`);
+                } else if (err.name === 'TypeError') {
+                    toastr.error(`A CORS error happened!`);
+                } else {
+                    toastr.error(err.statusText);
+                }
+            } finally {
+                getEnzymButton.disabled = false;
+            }
         }
-        // async function loadEnzym(enzym) {
-        //     let url = `http://bioinf.mocklab.io/api/v2/enzymes/${enzym}`;
-        //     let response = await fetch(url, {method: "POST"});
-        //     if (response.status != 200) {
-        //         toastr.error(`${enzym} is not in the api!`);
-        //     }
-        //     let cuttinSites = {}
-        //     cuttinSites[enzym] = {"sites": [], "location": []}
-        //     let url = `https://bioinf.nl/enzyme/api/v1/enzyme/${enzym}`;
-        //     let response = await fetch(url, {method: "POST"});
-        //     if (response.ok) {
-        //         let result = await response.json();
-        //         result.site.forEach(element => {
-        //             let site = element.replace("^", "");
-        //             cuttinSites[enzym].sites.push(site);
-        //             let re = new RegExp(site, "g");
-        //             let matches = [...sequence.seq.matchAll(re)];
-        //             let indexes = [];
-        //             matches.forEach((match) => {
-        //                 indexes.push(match.index)
-        //             });
-        //             cuttinSites[enzym].location.push(indexes);
-        //         });
-        //     } else {
-        //         cuttinSites[enzym] = {"sites": ["-"], "location": []}
-        //     }
-        //     let countListElem = document.getElementById("countList");
-        //     Object.keys(cuttinSites).forEach(function(key, index) {
-        //         cuttinSites[key].sites.forEach(function (site, i) {
-        //             let entry = document.createElement('li');
-        //             let text;
-        //             if (site === "-") {
-        //                 text = `Enzym '${key}' not found.`
-        //             } else if (cuttinSites[key].location[i].length < 1) {
-        //                 text = `${key}'s site '${site}' is not present in the sequence.`
-        //             } else {
-        //                 text = `${key}'s site '${site}' is present in the sequence (position(s) ${cuttinSites[key].location[i]})`;
-        //             }
-        //             entry.appendChild(document.createTextNode(text));
-        //             countListElem.appendChild(entry);
-        //         });
-        //     })
-        // }
+        async function parseEnzym(enzym, res) {
+            try {
+                let result = await res.json();
+                let cuttinSites = {};
+                cuttinSites[enzym] = {"sites": [], "location": []};
+                result.site.forEach(element => {
+                    let site = element.replace("^", "");
+                    cuttinSites[enzym].sites.push(site);
+                    let re = new RegExp(site, "g");
+                    let matches = [...sequence.seq.matchAll(re)];
+                    let indexes = [];
+                    matches.forEach((match) => {
+                        indexes.push(match.index);
+                    });
+                    cuttinSites[enzym].location.push(indexes);
+                    parseData(cuttinSites);
+                });
+            } catch(err) {
+                toastr.error(`Error while parsing the data`);
+            }
+        }
+
+        function parseData(cuttinSites) {
+            let countListElem = document.getElementById("countList");
+            Object.keys(cuttinSites).forEach(function(key, index) {
+                cuttinSites[key].sites.forEach(function (site, i) {
+                    let entry = document.createElement('li');
+                    let text;
+                    if (site === "-") {
+                        text = `Enzym '${key}' not found.`
+                    } else if (cuttinSites[key].location[i].length < 1) {
+                        text = `${key}'s site '${site}' is not present in the sequence.`
+                    } else {
+                        text = `${key}'s site '${site}' is present in the sequence (position(s) ${cuttinSites[key].location[i]})`;
+                    }
+                    entry.appendChild(document.createTextNode(text));
+                    countListElem.appendChild(entry);
+                });
+            });
+        }
     </script>
 </body>
 </html>
