--- a/Week_4_5/public/index.html
+++ b/Week_4_5/public/index.html
@@ -10,9 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href=" https://cdn.jsdelivr.net/npm/toastr@2.1.4/build/toastr.min.css " rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="./public/index.css">
 </head>
 <body>
-    <h1>Hi</h1>
+    <form id="sequence-form">
+        <label for="sequence">Type in a  length for a random DNA sequence:</label>
+        <input type="number" id="sequence" name="sequence" min="1000" max="10000">
+        <button type="submit" id="get-sequence">Submit</button>
+    </form>
+
+    <ul id="countList"></ul>
 
     <script src="./public/index.js"></script>
 </body>
