--- a/Week_4_5/public/index.html
+++ b/Week_4_5/public/index.html
@@ -19,7 +19,20 @@
         <button type="submit" id="get-sequence">Submit</button>
     </form>
 
-    <ul id="countList"></ul>
+    <table id="dataTable">
+        <thead>
+            <tr>
+                <th>Sequence</th>
+                <th>Enzym</th>
+                <th>Site</th>
+                <th>Locations</th>
+            </tr>
+        </thead>
+        <tbody id="tableBody"></tbody>
+
+    </table>
+
+    <!-- <ul id="countList"></ul> -->
 
     <script src="./public/index.js"></script>
 </body>
